--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -46,24 +46,24 @@
 
 \mainmatter
 
-%\include{introduction}
-%\include{rbffd_method}
-%\include{ordering_and_preconditioning}
-%\include{gpu_solver}
+\include{introduction}
+\include{rbffd_method}
+\include{ordering_and_preconditioning}
+\include{gpu_solver}
 \include{distributed_solver}
 
-%\include{explicit_pde_solutions}
-%\include{implicit_pde_solutions}
-%\include{publications}
+\include{explicit_pde_solutions}
+\include{implicit_pde_solutions}
+\include{publications}
 
-%\include{conclusions}
+\include{conclusions}
 
-%\appendix
-%\include{rbffd_avoid_pole_singularities}
-%\include{rbffd_weights_on_sphere}
-%\include{performance_content/scaling/cut_from_distributed_solver}
-%\include{performance_content/optimizations}
-%\include{performance_content/hardware}
+\appendix
+\include{rbffd_avoid_pole_singularities}
+\include{rbffd_weights_on_sphere}
+\include{performance_content/scaling/cut_from_distributed_solver}
+\include{performance_content/optimizations}
+\include{performance_content/hardware}
 
 %\include{stokes_revisited}
 
