--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -55,9 +55,7 @@ The success of GPGPU is largely due to the incredible gap between compute capabi
 \end{figure}
 
 
-The success of CUDA led to a vast number of libraries and publications
-
-New languages
+In the years since the release of CUDA a vast number of libraries and language extensions have surfaced that leverage the hardware for scientific computing. 
 
 
 \section{Managing Expectations for the GPU}
