--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -198,7 +198,7 @@ Multi-GPU Jacobi iteration for Navier stokes flow in cavity \url{http://scholarw
 
 Thibault et al. have multiple works on Multi-GPU and overlapping comm and comp. 
 
-
+The latest version of PETSc includes GPU support. PETSc is a widely-used library for distributed sparse and dense matrix algebra. 
 
 \ifstandalone
 %Bei direkter Übersetzung sollte gleich noch das Literaturverzeichnis rein.
