fixed eps figures to use eps-converted-to.pdf

--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -404,7 +404,7 @@ Other formats exist such as the Hybrid ELL plus CSR (HYB) format \cite{Bell2009}
 
 \begin{figure}
 \centering
-\includegraphics[width=0.5\textwidth]{../figures/spmv/spmv_vcl_gflops.eps}
+\includegraphics[width=0.5\textwidth]{../figures/spmv/spmv_vcl_gflops-eps-converted-to.pdf}
 \caption{Single GPU ViennaCL SpMV throughput (GFLOPs) compared to Boost::uBLAS CSR. Stencil size $n=50$ for all cases.}
 \label{fig:spmv_vcl_gflops}
 \end{figure}
