--- a/latex/ordering_and_preconditioning.tex
+++ b/latex/ordering_and_preconditioning.tex
@@ -596,13 +596,13 @@ Most CM and RCM implementations assume the algorithms operate on square, symmetr
 %\centering
 %\begin{subfigure}{12.5cm}
 %\centering
-%\includegraphics[width=\textwidth]{rbffd_methods_content/hashing/rcm_example_dm.eps} 
+%\includegraphics[width=\textwidth]{rbffd_methods_content/hashing/rcm_example_dm-eps-converted-to.pdf} 
 %\label{fig:rcm_dm_before_after}
 %\caption{DM before and after}
 %\end{subfigure}
 %\begin{subfigure}{12.5cm}
 %\centering
-%\includegraphics[width=\textwidth]{rbffd_methods_content/hashing/node_ordering_rcm_n5.eps} 
+%\includegraphics[width=\textwidth]{rbffd_methods_content/hashing/node_ordering_rcm_n5-eps-converted-to.pdf} 
 %\caption{The RCM Ordering Curve}
 %\label{fig:rcm_curve}
 %\end{subfigure}
@@ -729,7 +729,7 @@ At this time, investigation into floating point Z-ordering is on hold as there i
 %\centering
 %\begin{subfigure}{0.45\textwidth}
 %\centering
-%\includegraphics[width=\textwidth]{rbffd_methods_content/hashing/originalorder_regulargrid.eps}
+%\includegraphics[width=\textwidth]{rbffd_methods_content/hashing/originalorder_regulargrid-eps-converted-to.pdf}
 %\caption{Original Node Distribution}
 %\end{subfigure}
 %\begin{subfigure}{0.45\textwidth}
