--- a/latex/rbffd_weights_on_sphere.tex
+++ b/latex/rbffd_weights_on_sphere.tex
@@ -88,20 +88,20 @@ Indirect weights for $\mathbf{p}_{x} \cdot \nabla$ are assembled following the f
 	\centering
 	\begin{subfigure}[t]{0.48\textwidth}
 	\centering
-	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/sph32_times_sin20x.eps}
+	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/sph32_times_sin20x-eps-converted-to.pdf}
 	\caption{Test function:  \\ $Y_{3}^{2} \sin(20 x) $.  }
 		\label{fig:direct_vs_indirect_manufactured_base}
 	\end{subfigure}
 	
 	\begin{subfigure}[t]{0.48\textwidth}
 		\centering
-	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/pdx_sph32_times_sin20x.eps}
+	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/pdx_sph32_times_sin20x-eps-converted-to.pdf}
 	\caption{$\mathbf{p}_{x} \cdot \nabla ( Y_{3}^{2} \sin(20 x))$ }
 			\label{fig:direct_vs_indirect_manufactured_xsfc}
 	\end{subfigure}
 	\begin{subfigure}[t]{0.48\textwidth}
 		\centering
-	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/lsfc_sph32_times_sin20x.eps}
+	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/lsfc_sph32_times_sin20x-eps-converted-to.pdf}
 	\caption{Surface Laplacian: \\ $\LaplaceBeltrami ( Y_{3}^{2} \sin(20 x) )$  }
 				\label{fig:direct_vs_indirect_manufactured_lsfc}
 	\end{subfigure}
@@ -119,22 +119,22 @@ The relative error for both direct (Figure~\ref{fig:direct_vs_indirect_relative_
 \begin{figure}
 	\centering
 	\begin{subfigure}[t]{0.48\textwidth}
-	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/direct_rel_l2_error.eps}
+	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/direct_rel_l2_error-eps-converted-to.pdf}
 	\caption{$\mathbf{p}_{x} \cdot \nabla ( Y_{3}^{2} \sin(20 x))$, direct weights}
 			\label{fig:direct_vs_indirect_relative_error_xsfc_direct}
 	\end{subfigure}
 	\begin{subfigure}[t]{0.48\textwidth}
-	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/direct_rel_l2_error.eps}
+	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/direct_rel_l2_error-eps-converted-to.pdf}
 	\caption{$\LaplaceBeltrami ( Y_{3}^{2} \sin(20 x) )$, direct weights}
 			\label{fig:direct_vs_indirect_relative_error_lsfc_direct}
     \end{subfigure}
     	\begin{subfigure}[t]{0.48\textwidth}
-	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/indirect_rel_l2_error.eps}
+	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/indirect_rel_l2_error-eps-converted-to.pdf}
 	\caption{$\mathbf{p}_{x} \cdot \nabla ( Y_{3}^{2} \sin(20 x))$, indirect weights}
 		\label{fig:direct_vs_indirect_relative_error_xsfc_indirect}
 	\end{subfigure}
 	\begin{subfigure}[t]{0.48\textwidth}
-	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/indirect_rel_l2_error.eps}
+	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/indirect_rel_l2_error-eps-converted-to.pdf}
 	\caption{$\LaplaceBeltrami ( Y_{3}^{2} \sin(20 x) )$, indirect weights}
 		\label{fig:direct_vs_indirect_relative_error_lsfc_indirect}
     \end{subfigure}
@@ -152,12 +152,12 @@ In conclusion, the results in Figures~\ref{fig:direct_vs_indirect_relative_error
 %\begin{figure}
 %	\centering
 %	\begin{subfigure}[t]{0.48\textwidth}
-%	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/diff_of_rel_l2_errors.eps}
+%	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/diff_of_rel_l2_errors-eps-converted-to.pdf}
 %	\caption{$\mathbf{p}_{x} \cdot \nabla ( Y_{3}^{2} \sin(20 x))$}
 %	\end{subfigure}
 %		\begin{subfigure}[t]{0.48\textwidth}
 %	\centering
-%	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/diff_of_rel_l2_errors.eps}
+%	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/diff_of_rel_l2_errors-eps-converted-to.pdf}
 %	\caption{$\LaplaceBeltrami ( Y_{3}^{2} \sin(20 x) )$ }
 %	\end{subfigure}
 %	\caption{Signed differences of relative $\ell_{2}$ errors in differentiation between Direct and Indirect weights. The sign indicates on the error indicates the higher of the two weight approaches.}
@@ -169,12 +169,12 @@ In conclusion, the results in Figures~\ref{fig:direct_vs_indirect_relative_error
 	\centering
 		\begin{subfigure}[t]{0.48\textwidth}
 		\centering
-	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/abs_diff_of_rel_l2_errors.eps}
+	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/xsfc_vs_xsfc_alt_on_sph32_times_sine_20x/abs_diff_of_rel_l2_errors-eps-converted-to.pdf}
 	\caption{$\mathbf{p}_{x} \cdot \nabla ( Y_{3}^{2} \sin(20 x))$}
 	\end{subfigure}
 	\begin{subfigure}[t]{0.48\textwidth}
 	\centering
-	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/abs_diff_of_rel_l2_errors.eps}
+	\includegraphics[width=1.0\textwidth]{../figures/appendices/direct_vs_indirect_weights/compare_weight_generation/lsfc_vs_px_grad_dot_px_grad/abs_diff_of_rel_l2_errors-eps-converted-to.pdf}
 	\caption{$\LaplaceBeltrami ( Y_{3}^{2} \sin(20 x) )$}
 	\end{subfigure}
 		\caption{Unsigned differences of relative $\ell_{2}$ errors in differentiation between Direct and Indirect weights.}
