--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -271,12 +271,17 @@ Figure~\ref{fig:decomp_spy} shows a local DM for a single partition with the lab
 \section{Communication Collectives}
 \label{sec:mpi_collectives}
 
-With a partitioning and local ordering complete, the next task is to establish communication collectives for transferring data between MPI processes. 
+With a partitioning and local ordering complete, the next task is to establish communication collectives to transfer data between MPI processes. Processes commonly share data with more than one neighbors. To accommodate this, general communication collectives are assumed for many-to-many and subset-to-subset connections. 
 
-Depending on the 
+Amdahl's law states that we g
+
+
 %TODO: MPI history as a standard
 
 %TODO: how does \cite{Schubert2011} do it? \cite{Yokota2010}. 
+The most common communication collective is the MPI\_Alltoall shown in Figure~\ref{fig:mpi_alltoall_visual}. 
+
+All-to-all collectives would work in most cases, RBF-FD stencils are not required/guaranteed to be symmetric. As a result, we often have non-uniform sharing across partitions, so an Alltoall would require over-padding all send/receive buffers to allow the maximum receive size times the number of processors. 
 
 Our implementation in \cite{BolligFlyerErlebacher2012} leveraged a horribly inefficient send/recv collective. 
 
@@ -284,7 +289,7 @@ The data presented here considers collectives: MPI\_Alltoall, MPI\_Alltoallv and
 
 The collective operation is essentially transposing information as seen in Figure~\ref{fig:mpi_alltoallv_visual}. 
 
-An Alltoall collective shares .... as in Figure~\ref{fig:mpi_alltoall_visual}. A basic Alltoall collective would work in most cases. However, RBF-FD stencils are not required/guaranteed to be symmetric. As a result, we often have non-uniform sharing across partitions, so an Alltoall would require over-padding all send/receive buffers to allow the maximum receive size times the number of processors. 
+An Alltoall collective shares .... as in Figure~\ref{fig:mpi_alltoall_visual}.
 
 In order to avoid excessive padding, we choose the Alltoallv collective, which allows processors to share non-uniform number of bytes with one another. Figure~\ref{fig:mpi_alltoallv_visual} illustrates the benefit of Alltoallv in comparison to Alltoall (Figure~\ref{fig:mpi_alltoall_visual}. By allowing variable number of bytes, the total message size is reduced for all processors. The downside to an alltoallv
 
