--- a/latex/explicit_pde_solutions.tex
+++ b/latex/explicit_pde_solutions.tex
@@ -136,7 +136,7 @@ Based on Figure~\ref{fig:conv_plot_vortex_nohv}, which shows the convergence wit
 \begin{center}
 \begin{subfigure}[b]{0.49\textwidth}
 	\centering
-	\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/vortex_rollup/vortexInitialCondition.eps}
+	\includegraphics[width=1.0\textwidth]{../figures/paper1/figures/vortex_rollup/vortexInitialCondition-eps-converted-to.pdf}
 	\caption{Initial Condition}
 	\label{fig:vortex_initial}
 \end{subfigure} 
