--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -564,7 +564,7 @@ work. A list of this and other possible avenues for future work is also included
 	Date-Modified = {2013-04-30 20:29:08 +0000},
 	Doi = {10.1016/j.camwa.2011.06.037},
 	Issn = {0898-1221},
-	Journal = {Computers & Mathematics with Applications},
+	Journal = {Computers \& Mathematics with Applications},
 	Keywords = {RBF-FD},
 	Number = {5},
 	Pages = {2143 - 2161},
