--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -11,7 +11,7 @@
 % NOTE: bibentry MUST appear before the hyperref or build will fail
 \usepackage{bibentry}
 \nobibliography*
-\usepackage[square,sort]{natbib}
+\usepackage[square,sort,comma,numbers]{natbib}
   
 \usepackage{float}
 \usepackage[
