--- a/latex/performance_content/optimizations.tex
+++ b/latex/performance_content/optimizations.tex
@@ -6,40 +6,70 @@
 
 The benchmarks in our first paper (\cite{BolligFlyerErlebacher2012}) demonstrated the initial strong scaling of our implementation for a distributed RK4 iteration and primitive communication with blocking MPI\_send/MPI\_recv routines. Data was acquired on the multi-GPU cluster named Keeneland \cite{Vetter2011}. The scaling of our implementation in the paper was poor as processes regularly waited on communication. However, the objective in \cite{BolligFlyerErlebacher2012} was not to present a well tuned distributed GPU implementation of RBF-FD, but instead focused on the design decisions for partitioning, index mapping, etc. and verification of both single and distributed GPU implementations as inefficient as they were. 
 
-The following data, also acquired on Keeneland, demonstrates performance of our implementation with communication managed by an MPI\_alltoallv collective. The test case considered is the vortex roll-up problem from Section~\ref{sec:vortex_rollup}. 
+The following data, also acquired on Keeneland, demonstrates performance of our implementation with communication managed by an MPI\_alltoallv collective. The test case considered is the cosine bell advection problem from Section~\ref{sec:cosine_bell}. 
 
-\begin{figure}[htbp]
+\begin{figure}
 \centering
-\begin{subfigure}[b]{0.425\textwidth}
-\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/speedup_1proc_oneWarpPerStencil.pdf}
+\begin{subfigure}[t]{0.425\textwidth}
+\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/gflops_cpu_1proc_oneWarpPerStencil.eps}
 \caption{One warp per stencil kernel on one GPU in Keeneland}
-\label{fig:alltoall_1proc_warp}
+\label{fig:gflops_cpu_1proc_keeneland}
 \end{subfigure} 
-\begin{subfigure}[b]{0.425\textwidth}
+
+\begin{subfigure}[t]{0.425\textwidth}
+\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/speedup_1proc_oneWarpPerStencil.eps}
+\caption{One warp per stencil kernel on one GPU in Keeneland}
+\label{fig:speedup_1proc_oneWarp_keeneland}
+\end{subfigure} 
+\begin{subfigure}[t]{0.425\textwidth}
+\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/speedup_1proc_oneThreadPerStencil.eps}
+\caption{One warp per stencil kernel on one GPU in Keeneland}
+\label{fig:speedup_1proc_oneThread_keeneland}
+\end{subfigure} 
+\begin{subfigure}[t]{0.425\textwidth}
+\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/gflops_gpu_1proc_oneWarpPerStencil.eps}
+\caption{One warp per stencil kernel on one GPU in Keeneland}
+\label{fig:gflops_gpu_1proc_oneWarp_keeneland}
+\end{subfigure} 
+\begin{subfigure}[t]{0.425\textwidth}
+\includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/gflops_gpu_1proc_oneThreadPerStencil.eps}
+\caption{One warp per stencil kernel on one GPU in Keeneland}
+\label{fig:gflops_gpu_1proc_oneThread_keeneland}
+\end{subfigure} 
+\end{figure} 
+
+
+\begin{figure}
+\centering
+\begin{subfigure}[t]{0.425\textwidth}
 \centering
 \includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/speedup_1CPU_vs_NCPU.pdf}
-\caption{Multi-CPU strong scaling on Keeneland for one warp per stencil}
+\caption{Multi-CPU strong scaling on Keeneland for one warp per stencil. Problem size is sufficiently large to hide latency in MPI communication.}
 \label{fig:alltoall_multicpu_scaling}
 \end{subfigure} 
-\begin{subfigure}[b]{0.425\textwidth}
+\begin{subfigure}[t]{0.425\textwidth}
 \centering
 \includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/speedup_1CPU_vs_NGPU_WarpPerStencil.pdf}
 \caption{Multi-GPU strong scaling vs one CPU on Keeneland for one warp per stencil}
 \label{fig:alltoall_multigpu_vs_cpu_scaling}
 \end{subfigure} 
-\begin{subfigure}[b]{0.425\textwidth}
+\begin{subfigure}[t]{0.425\textwidth}
 \centering
 \includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/speedup_1GPU_vs_NGPU_WarpPerStencil.pdf}
 \caption{Multi-GPU strong scaling vs one GPU on Keeneland for one warp per stencil}
 \label{fig:alltoall_multigpu_vs_gpu_scaling}
 \end{subfigure} 
-\begin{subfigure}[b]{0.425\textwidth}
+\end{figure}
+
+\begin{figure}
+\centering
+\begin{subfigure}[t]{0.425\textwidth}
 \centering
 \includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/multiCPU_costs.pdf}
 \caption{Multi-CPU benchmarks by component on Keeneland}
 \label{fig:alltoall_multicpu_costs}
 \end{subfigure} 
-\begin{subfigure}[b]{0.425\textwidth}
+\begin{subfigure}[t]{0.425\textwidth}
 \centering
 \includegraphics[width=1.0\textwidth]{../figures/keeneland_results/alltoallv/multiGPU_warp_costs.pdf}
 \caption{Multi-GPU benchmarks by component on Keeneland}
@@ -48,8 +78,8 @@ The following data, also acquired on Keeneland, demonstrates performance of our 
 \end{figure} 
 
 %TODO: urgent
-\authnote{FIX:} 
-Figure~\ref{fig:alltoall_1proc_warp} shows the performance of the one warp-per-stencil GPU kernel  in the paper. 
+\authnote{Relocate SpMV only data:} 
+Figure~\ref{fig:alltoall_1proc_warp} shows the speedup gained of the one warp-per-stencil GPU kernel
 
 Figure~\ref{fig:alltoall_multicpu_scaling}  shows the strong scalability of our method on Multiple CPUs. In distributed computing, ideal scaling is linear. This figure demonstrates that our method does scale linearly (almost super-linearly) as the number of CPUs increases, so our prospect for spanning all CPUs on Keeneland is within reach for problem sizes large enough. The super-linear speedup seen for 10 processors results from improved caching on processors as their individual problem sizes decrease and the processors are able to keep a larger percentage of the problem within fast cache memory.
 
@@ -84,25 +114,50 @@ These results were run on Spear. MPI communication is done with an MPI\_alltoall
 \begin{figure}[htbp]
 \centering
 \begin{subfigure}[b]{0.425\textwidth}
-\includegraphics[width=1.0\textwidth]{../figures/spear_results/alltoallv/speedup_1proc_oneWarpPerStencil.eps}
+\includegraphics[width=1.0\textwidth]{../figures/spear_results/vortex/gflops_cpu_1proc_oneWarpPerStencil.eps}
+\caption{One warp per stencil kernel on one GPU in Spear}
+\label{fig:alltoall_1proc_warp}
+\end{subfigure} 
+
+\begin{subfigure}[b]{0.425\textwidth}
+\includegraphics[width=1.0\textwidth]{../figures/spear_results/vortex/speedup_1proc_oneWarpPerStencil.eps}
 \caption{One warp per stencil kernel on one GPU in Spear}
 \label{fig:alltoall_1proc_warp}
 \end{subfigure} 
 \begin{subfigure}[b]{0.425\textwidth}
+\includegraphics[width=1.0\textwidth]{../figures/spear_results/vortex/speedup_1proc_oneThreadPerStencil.eps}
+\caption{One warp per stencil kernel on one GPU in Spear}
+\label{fig:alltoall_1proc_warp}
+\end{subfigure} 
+\begin{subfigure}[b]{0.425\textwidth}
+\includegraphics[width=1.0\textwidth]{../figures/spear_results/vortex/gflops_gpu_1proc_oneWarpPerStencil.eps}
+\caption{One warp per stencil kernel on one GPU in Spear}
+\label{fig:alltoall_1proc_warp}
+\end{subfigure} 
+\begin{subfigure}[b]{0.425\textwidth}
+\includegraphics[width=1.0\textwidth]{../figures/spear_results/vortex/gflops_gpu_1proc_oneThreadPerStencil.eps}
+\caption{One warp per stencil kernel on one GPU in Spear}
+\label{fig:alltoall_1proc_warp}
+\end{subfigure} 
+\end{figure}
+
+\begin{figure}[htbp]
 \centering
-\includegraphics[width=1.0\textwidth]{../figures/spear_results/alltoallv/speedup_1CPU_vs_NCPU.eps}
+\begin{subfigure}[b]{0.425\textwidth}
+\centering
+\includegraphics[width=1.0\textwidth]{../figures/spear_results/vortex/speedup_1CPU_vs_NCPU.eps}
 \caption{Multi-CPU strong scaling on spear for one warp per stencil}
 \label{fig:alltoall_multicpu_scaling}
 \end{subfigure} 
 \begin{subfigure}[b]{0.425\textwidth}
 \centering
-\includegraphics[width=1.0\textwidth]{../figures/spear_results/alltoallv/speedup_1CPU_vs_NGPU_WarpPerStencil.eps}
+\includegraphics[width=1.0\textwidth]{../figures/spear_results/vortex/speedup_1CPU_vs_NGPU_WarpPerStencil.eps}
 \caption{Multi-GPU strong scaling vs one CPU on Spear for one warp per stencil}
 \label{fig:alltoall_multigpu_vs_cpu_scaling}
 \end{subfigure} 
 \begin{subfigure}[b]{0.425\textwidth}
 \centering
-\includegraphics[width=1.0\textwidth]{../figures/spear_results/alltoallv/speedup_1GPU_vs_NGPU_WarpPerStencil.eps}
+\includegraphics[width=1.0\textwidth]{../figures/spear_results/vortex/speedup_1GPU_vs_NGPU_WarpPerStencil.eps}
 \caption{Multi-GPU strong scaling vs one GPU on Spear for one warp per stencil}
 \label{fig:alltoall_multigpu_vs_gpu_scaling}
 \end{subfigure} 
